# CollectionsImportGenerator

./: .gitignore  .pylintrc  Archway to Collections Mapping.xlsx  Makefile  README.md  import-generator.py  pyproject.toml
.github/workflows/: unit-tests-all.yml
JsonTableSchema/: JsonTableSchema.py
config/: import-mapping.cfg
libs/: ExternalCSVHandlerClass.py  ImportOverviewGenerator.py  ImportSheetGenerator.py  droidcsvhandlerclass.py  unicodecsv.py
schema/: archway-import-schema.json
src/collections_import/: ExternalCSVHandlerClass.py  ImportOverviewGenerator.py  ImportSheetGenerator.py  collections_import.py  droidcsvhandlerclass.py  external_csv_handler.py  import_sheet_generator.py  schema_file.py  unicodecsv.py
src/collections_import/JsonTableSchema/: JsonTableSchema.py  csvdatatypes.py
src/collections_import/json_table_schema/: json_table_schema.py
tests/: test_collections_generator.py
